# puremvc-cpp-multicore-framework

./: .gitignore  CMakeLists.txt
include/PureMVC/: PureMVC.hpp
include/PureMVC/Core/: Controller.hpp  Model.hpp  View.hpp
include/PureMVC/Interfaces/: IAggregate.hpp  IController.hpp  IMediator.hpp  IModel.hpp  IView.hpp
include/PureMVC/Patterns/Facade/: Facade.hpp
include/PureMVC/Patterns/Iterator/: Iterator.hpp
puremvc_app/: CMakeLists.txt  main.cpp
src/PureMVC/: Common.hpp  PureMVC.cpp
src/PureMVC/Core/: Controller.cpp  Model.cpp  View.cpp
testsuite/src/: FacadeTest.cpp  IteratorTest.hpp  PureMVCTest.cpp
